@@ -189,14 +189,29 @@
    `(js2-function-param ((t (:foreground ,fggreen))))
    `(link ((t (:foreground ,fgorange :underline t))))
    `(link-visited ((t (:foreground ,fgmagenta :underline t))))
+   `(magit-bisect-bad ((t (:foreground ,fgred))))
+   `(magit-bisect-good ((t (:foreground ,fggreen))))
+   `(magit-bisect-skip ((t (:foreground ,fgdim))))
+   `(magit-blame-date ((t (:foreground ,fgpink :inherit magit-blame-heading))))
+   `(magit-blame-hash ((t (:foreground ,fgmagenta :inherit magit-blame-heading))))
    `(magit-blame-header ((t (:foreground ,fggreen :background ,bgdim :weight bold :inherit unspecified))))
+   `(magit-blame-heading ((t (:foreground ,fgdefault :background ,bgbright))))
+   `(magit-blame-name ((t (:foreground ,fgturquoise :inherit magit-blame-heading))))
+   `(magit-blame-summary ((t (:foreground ,fggreen :inherit magit-blame-heading))))
    `(magit-branch ((t (:foreground ,fgpink :weight bold :inherit unspecified))))
+   `(magit-branch-current ((t (:foreground ,fgdefault :background ,bgblue :box (:color ,bgblue :line-width 2 :style nil) :inherit unspecified))))
+   `(magit-branch-local ((t (:foreground ,fgdefault :background ,bgmagenta :box (:color ,bgmagenta :line-width 2 :style nil)))))
+   `(magit-branch-remote ((t (:foreground ,fgdefault :background ,bggreen :box (:color ,bggreen :line-width 2 :style nil)))))
+   `(magit-diff-added ((t (:foreground unspecified :background unspecified :inherit diff-added))))
+   `(magit-diff-added-highlight ((t (:foreground unspecified :background unspecified :inherit diff-hl-insert))))
+   `(magit-diff-context ((t (:foreground unspecified :inherit shadow))))
+   `(magit-diff-context-highlight ((t (:foreground unspecified :background ,bgdim :inherit magit-diff-context))))
    `(magit-item-highlight ((t (:slant italic  :inherit unspecified))))
+   `(magit-log-head-label-default ((t (:foreground ,fgdefault :background ,bgcyan :box (:color ,bgcyan :line-width 2 :style nil)))))
+   `(magit-log-head-label-head ((t (:foreground ,fgdefault :background ,bgblue :box (:color ,bgblue :line-width 2 :style nil)))))
    `(magit-log-head-label-local ((t (:foreground ,fgdefault :background ,bgmagenta :box (:color ,bgmagenta :line-width 2 :style nil)))))
    `(magit-log-head-label-remote ((t (:foreground ,fgdefault :background ,bggreen :box (:color ,bggreen :line-width 2 :style nil)))))
    `(magit-log-head-label-tags ((t (:foreground ,fgdefault :background ,bgorange :box (:color ,bgorange :line-width 2 :style nil)))))
-   `(magit-log-head-label-head ((t (:foreground ,fgdefault :background ,bgblue :box (:color ,bgblue :line-width 2 :style nil)))))
-   `(magit-log-head-label-default ((t (:foreground ,fgdefault :background ,bgcyan :box (:color ,bgcyan :line-width 2 :style nil)))))
    `(magit-log-sha1 ((t (:foreground ,fgdefault :background ,bgblue :box (:color ,bgblue :line-width 2 :style nil)))))
    `(magit-section-title ((t (:foreground ,fgturquoise :inherit unspecified :height 1.8))))
    `(makefile-space ((t (:background ,bgpink))))
